# penny

./: .containerignore  .dockerignore  .env  .git-blame-ignore-revs  .gitignore  Containerfile  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  Procfile  README.md  README.rst  Taskfile.yml  boot.sh  fabfile.py  go.mod  go.sum  main.go  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  wails.json
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  main.yml
app/: __init__.py  conf.py  test_init.py  test_util.py  util.py  views.py
app/common/: accountmatchrun.py  filetypes.py  import_transactions.py  init_data.py  paypal.py  tasks.py  util.py
app/common/attachments/: __init__.py
app/common/filetypes/: __init__.py  paypal_csv.py
app/common/forms/: __init__.py
app/common/transactions/: create.py
app/lib/flask_security/: register.py
app/models/: __init__.py
app/resources/: __init__.py
app/resources/accountmatches/: __init__.py  controllers.py  forms.py  util.py
app/resources/accounts/: controllers.py  forms.py
app/resources/bankaccounts/: __init__.py  controllers.py  forms.py
app/resources/entities/: __init__.py  controllers.py  forms.py
app/resources/reports/: __init__.py  controllers.py  monthly_breakdown.py  profitloss.py  savings_rate.py
app/resources/tasks/: __init__.py  controllers.py
app/resources/transactions/: controllers.py  forms.py
app/static/css/: forms.css  styles.css
app/templates/: account.html  accountmatch.html  accounts.html  entities.html  entity.html  navbar.html  tasks.html  transaction.html  transaction_add.html  transactions.html
app/templates/errors/: account_not_found.html  invalid_date_range.html  invalid_report_type.html
app/templates/reports/: account-monthly.html  monthly-breakdown.html  profitloss.html  savings-rate.html
app/templates/user/: login.html  register.html
cmd/penny/: main.go
cmd/reconcile/: main.go
docs/: reconcile.md
frontend/: index.html  package-lock.json
frontend/src/: App.vue
frontend/src/components/: Sidebar.vue
internal/cli/: cli.go  reconcile.go
internal/handler/: handler.go
internal/model/: model.go
internal/seed/: seed.go
internal/v1/: reconcile.go  v1.go
migrations/: alembic.ini
migrations/versions/: 19d709c26f6_.py  464db55c5bbc_.py  474a7b3c5c13_.py  4ef27bbd49ce_.py  56bac2207b80_.py  82ff85d6d7e5_.py  87246e047222_.py  983cac6d79fb_.py  9d0219be4f0e_.py  b153a4976d48_.py  e16799a209b1_tags.py  e6f93b17d62e_.py  f27378b083d1_tags.py  f490e985f5c9_.py
penny/: __init__.py  cli.py  conf.py  extensions.py  util.py
penny/cli/: report.py  seed.py  task.py  transaction.py  txmeta.py
penny/common/: accountmatchrun.py  currency.py  filetypes.py  import_transactions.py  init_data.py  paypal.py  tasks.py  util.py
penny/common/attachments/: __init__.py
penny/common/forms/: __init__.py
penny/models/: __init__.py
penny/resources/: __init__.py
penny/tasks/: __init__.py  fetch_tx_meta.py
penny/templates/: account.html  accountmatch.html  accountmatches.html  accounts.html  bankaccount.html  bankaccounts.html  entities.html  entity.html  navbar.html  reports.html  tag.html  tags.html  tasks.html  transaction.html  transaction_add.html  transaction_import.html  transactions.html
scripts/: assign_parent_and_bankaccount.py  find_duplicate_transactions.py  import_credit_card_transactions.py  import_transaction_upload.py  install-deps.sh  parse_ofx.py  regen_transaction_hash.py  remove_double_whitespace_from_transactions.py  report_account_breakdown.py  report_df_account.py  report_profit_loss.py  run_accountmatchrun.py
tests/: conftest.py  test_account.py  test_app_common_util.py  test_bankaccount.py  test_common_util.py  test_entity.py  test_login.py  test_reports_monthly_breakdown.py  test_transaction.py  test_util.py
(+60 files in other folders)
