[tool.poetry]
name = "penny"
version = "0.0.3"
description = "A personal finance tracking web application"
authors = ["Rene Cunningham <rene@compounddata.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.3.3"
appdirs = "1.4.3"
asn1crypto = "1.3.0"
Babel = "2.8.0"
beautifulsoup4 = "4.9.1"
blinker = "1.4"
certifi = "2020.4.5.2"
cffi = "1.14.0"
chardet = "3.0.4"
click = "8.1.2"
cryptography = "36.0.2"
enum34 = "1.1.6"
flask = "2.1.1"
Flask-BabelEx = "0.9.4"
Flask-Login = "0.6.1"
Flask-Mail = "0.9.1"
Flask-Migrate = "2.4.0"
Flask-Principal = "0.4.0"
Flask-RQ = "0.2"
Flask-Script = "2.0.6"
Flask-SQLAlchemy = "2.5.1"
Flask-WTF = "1.0.1"
gevent = "20.6.1"
greenlet = "0.4.16"
gunicorn = "19.9.0"
honcho = "1.0.1"
idna = "2.8"
ipaddress = "1.0.23"
itsdangerous = "2.1.2"
Jinja2 = "3.1.1"
keyring = "21.2.0"
"keyrings.alt" = "3.4.0"
lxml = "4.5.0"
Mako = "1.1.2"
MarkupSafe = "2.1.1"
marshmallow = "2.19.2"
ndg-httpsclient = "0.5.1"
ofxparse = "0.20"
packaging = "20.4"
passlib = "1.7.4"
bcrypt = "3.2.0"
pyasn1 = "0.4.5"
pycparser = "2.21"
pycrypto = "2.6.1"
PyMySQL = "1.0.2"
pyOpenSSL = "22.0.0"
pyparsing = "2.4.6"
python-dateutil = "2.8.1"
python-editor = "1.0.4"
pytz = "2019.3"
pyxdg = "0.26"
redis = "4.2.2"
requests = "^2.27.1"
rq = "1.10.1"
SecretStorage = "3.1.2"
selenium = "3.141.0"
six = "1.14.0"
soupsieve = "1.9"
speaklater = "1.3"
SQLAlchemy = "1.4.35"
urllib3 = "1.25.9"
webargs = "6.1.0"
Werkzeug = "2.0.3"
WTForms = "2.2.1"
WTForms-SQLAlchemy = "0.3"
xvfbwrapper = "0.2.9"
Flask-Security-Too = {extras = ["fsqla", "common"], version = "^4.1.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "5.3"
pycodestyle = "2.6.0"
mypy = "^0.950"
sqlalchemy-stubs = "^0.4"
types-redis = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.mypy]
ignore_missing_imports = true
